Embarrassing Typo fix
svn path=/trunk/cocoa-sharp/; revision=29236

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -6,7 +6,7 @@ Test.exe:
 	mcs Test.cs -out:Test.exe -r:../build/Apple.Foundation.dll -r:../build/Apple.AppKit.dll
 	cp ../build/*.dll .
 	cp ../src/appkit/.libs/libAppKitGlue.dylib .
-	cp ../src/appkit/.libs/libFoundationGlue.dylib .
+	cp ../src/foundation/.libs/libFoundationGlue.dylib .
 
 Loader:
 	gcc Loader.c -o Loader `pkg-config --cflags --libs mono`
