State dependencies in Makefiles and add debug info
svn path=/trunk/cocoa-sharp/; revision=29368

--- a/src/Apple.AppKit/Makefile
+++ b/src/Apple.AppKit/Makefile
@@ -1,3 +1,7 @@
-all:
-	mcs *.cs -target:library -out:../../build/Apple.AppKit.dll -r:../../build/Apple.Foundation.dll
+all: ../../build/Apple.AppKit.dll
+
+../../build/Apple.AppKit.dll: *.cs ../../build/Apple.Foundation.dll
+	mcs -g *.cs -target:library -out:../../build/Apple.AppKit.dll -r:../../build/Apple.Foundation.dll
+
 clean:
+	rm ../../build/Apple.AppKit.dll
