--- a/src/Apple.Foundation/Makefile
+++ b/src/Apple.Foundation/Makefile
@@ -1,3 +1,7 @@
-all:
-	mcs *.cs -target:library -out:../../build/Apple.Foundation.dll
+all: ../../build/Apple.Foundation.dll
+
+../../build/Apple.Foundation.dll: *.cs
+	mcs -g *.cs -target:library -out:../../build/Apple.Foundation.dll
+
 clean:
+	rm ../../build/Apple.Foundation.dll
