Add maintainer-clean target
svn path=/trunk/cocoa-sharp/; revision=29382

--- a/src/Apple.AppKit/Makefile
+++ b/src/Apple.AppKit/Makefile
@@ -3,5 +3,7 @@ all: ../../build/Apple.AppKit.dll
 ../../build/Apple.AppKit.dll: *.cs ../../build/Apple.Foundation.dll
 	mcs -g *.cs -target:library -out:../../build/Apple.AppKit.dll -r:../../build/Apple.Foundation.dll
 
+maintainer-clean: clean
+
 clean:
 	rm ../../build/Apple.AppKit.dll
