--- a/src/Apple.Foundation/Makefile
+++ b/src/Apple.Foundation/Makefile
@@ -3,5 +3,7 @@ all: ../../build/Apple.Foundation.dll
 ../../build/Apple.Foundation.dll: *.cs
 	mcs -g *.cs -target:library -out:../../build/Apple.Foundation.dll
 
+maintainer-clean: clean
+
 clean:
 	rm ../../build/Apple.Foundation.dll
