--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -2,11 +2,24 @@ SUBDIRS=..
 
 all: Test.exe Loader
 
-Test.exe: Test.cs ../build/Apple.Foundation.dll ../build/Apple.AppKit.dll ../src/appkit/.libs/libAppKitGlue.dylib ../src/foundation/.libs/libFoundationGlue.dylib
+CoreFoundation: /System/Library/Frameworks/CoreFoundation.framework/Versions/Current/CoreFoundation
+	ln -s /System/Library/Frameworks/CoreFoundation.framework/Versions/Current/CoreFoundation CoreFoundation
+
+Foundation: /System/Library/Frameworks/Foundation.framework/Versions/Current/Foundation
+	ln -s /System/Library/Frameworks/Foundation.framework/Versions/Current/Foundation Foundation
+
+libFoundationGlue.dylib: ../src/foundation/*.o
+	gcc -bundle -flat_namespace -undefined suppress -framework Cocoa -o libFoundationGlue.dylib ../src/foundation/*.o
+
+libAppKitGlue.dylib: ../src/appkit/*.o
+	gcc -bundle -flat_namespace -undefined suppress -framework Cocoa -o libAppKitGlue.dylib ../src/appkit/*.o
+
+Test.exe: Test.cs ../build/*.dll libAppKitGlue.dylib libFoundationGlue.dylib Foundation CoreFoundation
 	mcs -g Test.cs -out:Test.exe -r:../build/Apple.Foundation.dll -r:../build/Apple.AppKit.dll
 	cp ../build/*.dll .
-	cp ../src/appkit/.libs/libAppKitGlue.dylib .
-	cp ../src/foundation/.libs/libFoundationGlue.dylib .
 
 Loader: Loader.c
 	gcc -g Loader.c -o Loader `pkg-config --cflags --libs mono`
+
+run: Test.exe Loader
+	./Loader Test.exe
