--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -14,11 +14,14 @@ libFoundationGlue.dylib: ../src/foundation/*.o
 libAppKitGlue.dylib: ../src/appkit/*.o
 	gcc -bundle -flat_namespace -undefined suppress -framework Cocoa -o libAppKitGlue.dylib ../src/appkit/*.o
 
+libGlue.so: glue.m
+	gcc -bundle -flat_namespace -undefined suppress -framework Cocoa -o libGlue.so glue.m
+
 Test.exe: test.cs ../build/*.dll libAppKitGlue.dylib libFoundationGlue.dylib Foundation CoreFoundation
 	mcs -g Test.cs -out:Test.exe -r:../build/Apple.Foundation.dll -r:../build/Apple.AppKit.dll
 	cp ../build/*.dll .
 
-2ndTest.exe: test-2.cs CSControl.cs ../build/*.dll libAppKitGlue.dylib libFoundationGlue.dylib Foundation CoreFoundation
+2ndTest.exe: test-2.cs CSControl.cs libGlue.so ../build/*.dll libAppKitGlue.dylib libFoundationGlue.dylib Foundation CoreFoundation
 	mcs -g test-2.cs CSControl.cs -out:2ndTest.exe -r:../build/Apple.Foundation.dll -r:../build/Apple.AppKit.dll
 	cp ../build/*.dll .
 
