Cleanup, add test-4 to makefile
svn path=/trunk/cocoa-sharp/; revision=29463

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS=..
 
-all: Test.exe 2ndTest.exe Loader
+all: Test.exe 2ndTest.exe Loader test-4 test-4.exe
 
 CoreFoundation: /System/Library/Frameworks/CoreFoundation.framework/Versions/Current/CoreFoundation
 	ln -s /System/Library/Frameworks/CoreFoundation.framework/Versions/Current/CoreFoundation CoreFoundation
@@ -23,6 +23,13 @@ Test.exe: test.cs ../build/*.dll libAppKitGlue.dylib libFoundationGlue.dylib Fou
 
 2ndTest.exe: test-2.cs CSControl.cs libGlue.so ../build/*.dll libAppKitGlue.dylib libFoundationGlue.dylib Foundation CoreFoundation
 	mcs -g test-2.cs CSControl.cs -out:2ndTest.exe -r:../build/Apple.Foundation.dll -r:../build/Apple.AppKit.dll
+	cp ../build/*.dll .
+
+test-4: test-4.c
+	gcc -g -x objective-c test-4.c -o test-4 -dynamiclib -framework Cocoa
+
+test-4.exe: test-4.cs ../build/Apple.Foundation.dll
+	mcs -g test-4.cs -r:../build/Apple.Foundation.dll
 	cp ../build/*.dll .
 
 Loader: Loader.c
