--- a/configure.in
+++ b/configure.in
@@ -1,3 +1,17 @@
+#
+#  configure.in
+#
+#  Authors
+#    - C.J. Collier, Collier Technologies, <cjcollier@colliertech.org>
+#    - Urs C. Muff, Quark Inc., <umuff@quark.com>
+#    - Kangaroo, Geoff Norton
+#    - Adham Findlay
+#
+#  Copyright (c) 2004 Quark Inc. and Collier Technologies.  All rights reserved.
+#
+#	$Header: /home/miguel/third-conversion/public/cocoa-sharp/configure.in,v 1.3 2004/06/16 12:20:26 urs Exp $
+#
+
 AC_INIT(README)
 AC_CANONICAL_SYSTEM
 AC_PROG_LIBTOOL
@@ -78,3 +92,11 @@ src/Makefile
 src/appkit/Makefile
 src/foundation/Makefile
 ])
+
+#***************************************************************************
+#
+# $Log: configure.in,v $
+# Revision 1.3  2004/06/16 12:20:26  urs
+# Add CVS headers comments, authors and Copyright info, feel free to add your name or change what is appropriate
+#
+#***************************************************************************
