Some cleanup and POC of glue change
svn path=/trunk/cocoa-sharp/; revision=29734

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -15,7 +15,7 @@ libAppKitGlue.dylib: ../src/appkit/*.o
 	gcc -bundle -flat_namespace -undefined suppress -framework Cocoa -o libAppKitGlue.dylib ../src/appkit/*.o
 
 libGlue.so: glue.m
-	gcc -bundle -flat_namespace -undefined suppress -framework Cocoa -o libGlue.so glue.m
+	gcc -g -bundle -flat_namespace -undefined suppress -framework Cocoa -o libGlue.so glue.m
 
 Test.exe: test.cs ../build/*.dll libAppKitGlue.dylib libFoundationGlue.dylib Foundation CoreFoundation
 	mcs -g Test.cs -out:Test.exe -r:../build/Apple.Foundation.dll -r:../build/Apple.AppKit.dll
@@ -34,10 +34,40 @@ test-4.exe: test-4.cs ../build/Apple.Foundation.dll
 
 Loader: Loader.o Bundle.o
 	gcc Bundle.o Loader.o -o Loader -framework Cocoa `pkg-config --libs mono`
+
 Loader.o: Loader.c
 	gcc -g -c Loader.c -o Loader.o `pkg-config --cflags mono`
+
 Bundle.o: Bundle.m
 	gcc -x objective-c -g -c Bundle.m -o Bundle.o
+
+run2: 2ndTest.exe Loader
+	rm -Rf Loader.app
+	mkdir -p Loader.app/Contents/MacOS
+	mkdir -p Loader.app/Contents/Resources
+	cp ../sample/SimpleWindow/*.icns Loader.app/Contents/Resources
+	cp Info.plist Loader.app/Contents/
+	cp 2ndTest.exe Loader.app/Contents/Resources
+	cp *.dll* Loader.app/Contents/Resources
+	cp *Glue* Loader.app/Contents/Resources
+	ln -s /System/Library/Frameworks/CoreFoundation.framework/Versions/Current/CoreFoundation Loader.app/Contents/Resources/CoreFoundation
+	ln -s /System/Library/Frameworks/Foundation.framework/Versions/Current/Foundation Loader.app/Contents/Resources/Foundation
+	cp Loader Loader.app/Contents/MacOS
+	./Loader.app/Contents/MacOS/Loader 2ndTest.exe
+
+debug2: 2ndTest.exe Loader
+	rm -Rf Loader.app
+	mkdir -p Loader.app/Contents/MacOS
+	mkdir -p Loader.app/Contents/Resources
+	cp ../sample/SimpleWindow/*.icns Loader.app/Contents/Resources
+	cp Info.plist Loader.app/Contents/
+	cp 2ndTest.exe Loader.app/Contents/Resources
+	cp *.dll* Loader.app/Contents/Resources
+	cp *Glue* Loader.app/Contents/Resources
+	ln -s /System/Library/Frameworks/CoreFoundation.framework/Versions/Current/CoreFoundation Loader.app/Contents/Resources/CoreFoundation
+	ln -s /System/Library/Frameworks/Foundation.framework/Versions/Current/Foundation Loader.app/Contents/Resources/Foundation
+	cp Loader Loader.app/Contents/MacOS
+	gdb --args ./Loader.app/Contents/MacOS/Loader 2ndTest.exe
 
 run: Test.exe Loader
 	rm -Rf Loader.app
@@ -52,3 +82,4 @@ run: Test.exe Loader
 	ln -s /System/Library/Frameworks/Foundation.framework/Versions/Current/Foundation Loader.app/Contents/Resources/Foundation
 	cp Loader Loader.app/Contents/MacOS
 	./Loader.app/Contents/MacOS/Loader
+
