Modified to move non apple stuff out of NSObject
svn path=/trunk/cocoa-sharp/; revision=29743

--- a/src/Apple.Foundation/Makefile
+++ b/src/Apple.Foundation/Makefile
@@ -1,7 +1,7 @@
 all: ../../build/Apple.Foundation.dll
 
 ../../build/Apple.Foundation.dll: *.cs
-	mcs -g *.cs -target:library -out:../../build/Apple.Foundation.dll
+	mcs --unsafe -g *.cs -target:library -out:../../build/Apple.Foundation.dll -r:../../build/Apple.Tools.dll
 
 maintainer-clean: clean
 
