modifications so that Loader will have an icon in the finder
svn path=/trunk/cocoa-sharp/; revision=29808

--- a/test/Info.plist
+++ b/test/Info.plist
@@ -4,5 +4,7 @@
 <dict>
 	<key>CFBundleExecutable</key>
 	<string>Loader</string>
+        <key>CFBundleIconFile</key>
+        <string>mono.icns</string>
 </dict>
 </plist>
