Broken API fixes. Delegates and methods with multi-argument support working. Argument parsing and casting working for all our known classes.
svn path=/trunk/cocoa-sharp/; revision=29951

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -21,7 +21,7 @@ Test.exe: test.cs ../build/*.dll libAppKitGlue.dylib libFoundationGlue.dylib Fou
 	mcs -g Test.cs -out:Test.exe -r:../build/Apple.Foundation.dll -r:../build/Apple.AppKit.dll
 	cp ../build/*.dll .
 
-2ndTest.exe: test-2.cs CSControl.cs libGlue.so ../build/*.dll libAppKitGlue.dylib libFoundationGlue.dylib Foundation CoreFoundation
+2ndTest.exe: test-2.cs CSTextControl.cs CSControl.cs libGlue.so ../build/*.dll libAppKitGlue.dylib libFoundationGlue.dylib Foundation CoreFoundation
 	mcs -g test-2.cs CSTextControl.cs CSControl.cs -out:2ndTest.exe -r:../build/Apple.Foundation.dll -r:../build/Apple.AppKit.dll
 	cp ../build/*.dll .
 
