Update to use our new .Net based generator (much butter; supports protocols/categories/interfaces) Outputs working glue that doesn't break the tests.
svn path=/trunk/cocoa-sharp/; revision=30012

--- a/src/appkit/Makefile.am
+++ b/src/appkit/Makefile.am
@@ -2,151 +2,136 @@ PROJECT=cocoa-sharp
 VERSION=0.1
 
 lib_LTLIBRARIES=libAppKitGlue.la
-libAppKitGlue_la_SOURCES =				\
-	NSATSTypesetter_stub.m 		\
-	NSActionCell_stub.m 			\
-	NSAccessibility_stub.m 			\
-	NSAppleScriptExtensions_stub.m		\
-	NSAffineTransform_stub.m 		\
-	NSAlert_stub.m 			\
-	NSApplicationScripting_stub.m	\
-	NSApplication_stub.m 		\
-	NSArrayController_stub.m 		\
-	NSAttributedString_stub.m 		\
-	NSBezierPath_stub.m 			\
-	NSBitmapImageRep_stub.m 		\
-	NSBox_stub.m 			\
-	NSBrowserCell_stub.m 		\
-	NSBrowser_stub.m 			\
-	NSButtonCell_stub.m 			\
-	NSButton_stub.m 			\
-	NSCachedImageRep_stub.m 		\
-	NSCell_stub.m 			\
-	NSClipView_stub.m 			\
-	NSColorList_stub.m 			\
-	NSColorPanel_stub.m 			\
-	NSColorPicker_stub.m 		\
-	NSColorPicking_stub.m 		\
-	NSColorWell_stub.m 			\
-	NSColor_stub.m 			\
-	NSComboBoxCell_stub.m 		\
-	NSComboBox_stub.m 			\
-	NSControl_stub.m 			\
-	NSController_stub.m 			\
-	NSCursor_stub.m 			\
-	NSCustomImageRep_stub.m 		\
-	NSDocumentController_stub.m 		\
-	NSDocumentScripting_stub.m 		\
-	NSDocument_stub.m 			\
-	NSDragging_stub.m 			\
-	NSDrawer_stub.m 			\
-	NSEPSImageRep_stub.m 		\
-	NSErrors_stub.m 			\
-	NSEvent_stub.m 			\
-	NSFileWrapper_stub.m 		\
-	NSFontDescriptor_stub.m 		\
-	NSFontManager_stub.m 		\
-	NSFontPanel_stub.m 			\
-	NSFont_stub.m 			\
-	NSForm_stub.m 			\
-	NSFormCell_stub.m 			\
-	NSGlyphGenerator_stub.m 		\
-	NSGlyphInfo_stub.m 			\
-	NSGraphicsContext_stub.m 		\
-	NSGraphics_stub.m 			\
-	NSHelpManager_stub.m 		\
-	NSImageCell_stub.m 			\
-	NSImageRep_stub.m 			\
-	NSImageView_stub.m 			\
-	NSImage_stub.m 			\
-	NSInputManager_stub.m 		\
-	NSInputServer_stub.m 		\
-	NSInterfaceStyle_stub.m 		\
-	NSKeyValueBinding_stub.m 		\
-	NSLayoutManager_stub.m 		\
-	NSMatrix_stub.m 			\
-	NSMenuItemCell_stub.m 		\
-	NSMenuItem_stub.m 			\
-	NSMenuView_stub.m 			\
-	NSMenu_stub.m 			\
-	NSMovieView_stub.m 			\
-	NSMovie_stub.m 			\
-	NSNibConnector_stub.m 		\
-	NSNibControlConnector_stub.m		\
-	NSNibDeclarations_stub.m 		\
-	NSNibLoading_stub.m 			\
-	NSNibOutletConnector_stub.m 		\
-	NSNib_stub.m 			\
-	NSObjectController_stub.m 		\
-	NSOpenGLView_stub.m 			\
-	NSOpenGL_stub.m 			\
-	NSOpenPanel_stub.m 			\
-	NSOutlineView_stub.m 		\
-	NSPDFImageRep_stub.m 		\
-	NSPICTImageRep_stub.m 		\
-	NSPageLayout_stub.m 			\
-	NSPanel_stub.m 			\
-	NSParagraphStyle_stub.m 		\
-	NSPasteboard_stub.m 			\
-	NSPopUpButtonCell_stub.m 		\
-	NSPopUpButton_stub.m 		\
-	NSPrintInfo_stub.m 			\
-	NSPrintOperation_stub.m 		\
-	NSPrintPanel_stub.m 			\
-	NSPrinter_stub.m 			\
-	NSProgressIndicator_stub.m 		\
-	NSQuickDrawView_stub.m 		\
-	NSResponder_stub.m 			\
-	NSRulerMarker_stub.m 		\
-	NSRulerView_stub.m 			\
-	NSSavePanel_stub.m 			\
-	NSScreen_stub.m 			\
-	NSScrollView_stub.m 			\
-	NSScroller_stub.m 			\
-	NSSearchFieldCell_stub.m 		\
-	NSSearchField_stub.m 		\
-	NSSecureTextField_stub.m 		\
-	NSSegmentedCell_stub.m 		\
-	NSSegmentedControl_stub.m 		\
-	NSShadow_stub.m 			\
-	NSSlider_stub.m 			\
-	NSSliderCell_stub.m 			\
-	NSSound_stub.m 			\
-	NSSpeechRecognizer_stub.m 		\
-	NSSpeechSynthesizer_stub.m 		\
-	NSSpellChecker_stub.m 		\
-	NSSpellProtocol_stub.m 		\
-	NSSpellServer_stub.m 		\
-	NSSplitView_stub.m 			\
-	NSStatusBar_stub.m 			\
-	NSStatusItem_stub.m 			\
-	NSStepperCell_stub.m 		\
-	NSStepper_stub.m 			\
-	NSStringDrawing_stub.m 		\
-	NSTabViewItem_stub.m 		\
-	NSTabView_stub.m 			\
-	NSTableColumn_stub.m 		\
-	NSTableHeaderCell_stub.m 		\
-	NSTableHeaderView_stub.m 		\
-	NSTableView_stub.m 			\
-	NSTextAttachment_stub.m 		\
-	NSTextContainer_stub.m 		\
-	NSTextFieldCell_stub.m 		\
-	NSTextField_stub.m 			\
-	NSTextStorageScripting_stub.m	\
-	NSTextStorage_stub.m 		\
-	NSTextView_stub.m 			\
-	NSText_stub.m 			\
-	NSToolbarItem_stub.m 		\
-	NSToolbar_stub.m 			\
-	NSTypesetter_stub.m 			\
-	NSUserDefaultsController_stub.m 	\
-	NSUserInterfaceValidation_stub.m 	\
-	NSView_stub.m 			\
-	NSWindowController_stub.m 		\
-	NSWindowScripting_stub.m 		\
-	NSWindow_stub.m 			\	
-	NSWorkspace_stub.m 			
 
+libAppKitGlue_la_SOURCES =				\
+	NSATSTypesetter_glue.m \
+	NSActionCell_glue.m \
+	NSAffineTransform_glue.m \
+	NSAlert_glue.m \
+	NSApplication_glue.m \
+	NSArrayController_glue.m \
+	NSBezierPath_glue.m \
+	NSBitmapImageRep_glue.m \
+	NSBox_glue.m \
+	NSBrowserCell_glue.m \
+	NSBrowser_glue.m \
+	NSButtonCell_glue.m \
+	NSButton_glue.m \
+	NSCachedImageRep_glue.m \
+	NSCell_glue.m \
+	NSClipView_glue.m \
+	NSColorList_glue.m \
+	NSColorPanel_glue.m \
+	NSColorPicker_glue.m \
+	NSColorWell_glue.m \
+	NSColor_glue.m \
+	NSComboBoxCell_glue.m \
+	NSComboBox_glue.m \
+	NSControl_glue.m \
+	NSController_glue.m \
+	NSCursor_glue.m \
+	NSCustomImageRep_glue.m \
+	NSDocumentController_glue.m \
+	NSDocument_glue.m \
+	NSDrawer_glue.m \
+	NSEPSImageRep_glue.m \
+	NSEvent_glue.m \
+	NSFileWrapper_glue.m \
+	NSFontDescriptor_glue.m \
+	NSFontManager_glue.m \
+	NSFontPanel_glue.m \
+	NSFont_glue.m \
+	NSFormCell_glue.m \
+	NSForm_glue.m \
+	NSGlyphGenerator_glue.m \
+	NSGlyphInfo_glue.m \
+	NSGraphicsContext_glue.m \
+	NSHelpManager_glue.m \
+	NSImageCell_glue.m \
+	NSImageRep_glue.m \
+	NSImageView_glue.m \
+	NSImage_glue.m \
+	NSInputManager_glue.m \
+	NSInputServer_glue.m \
+	NSLayoutManager_glue.m \
+	NSMatrix_glue.m \
+	NSMenuItemCell_glue.m \
+	NSMenuItem_glue.m \
+	NSMenuView_glue.m \
+	NSMenu_glue.m \
+	NSMovieView_glue.m \
+	NSMovie_glue.m \
+	NSMutableParagraphStyle_glue.m \
+	NSNibConnector_glue.m \
+	NSNibControlConnector_glue.m \
+	NSNibOutletConnector_glue.m \
+	NSNib_glue.m \
+	NSObjectController_glue.m \
+	NSOpenGLContext_glue.m \
+	NSOpenGLPixelBuffer_glue.m \
+	NSOpenGLPixelFormat_glue.m \
+	NSOpenGLView_glue.m \
+	NSOpenPanel_glue.m \
+	NSOutlineView_glue.m \
+	NSPDFImageRep_glue.m \
+	NSPICTImageRep_glue.m \
+	NSPanel_glue.m \
+	NSParagraphStyle_glue.m \
+	NSPasteboard_glue.m \
+	NSPopUpButtonCell_glue.m \
+	NSPopUpButton_glue.m \
+	NSPrintInfo_glue.m \
+	NSPrintOperation_glue.m \
+	NSPrinter_glue.m \
+	NSProgressIndicator_glue.m \
+	NSQuickDrawView_glue.m \
+	NSResponder_glue.m \
+	NSRulerMarker_glue.m \
+	NSRulerView_glue.m \
+	NSSavePanel_glue.m \
+	NSScreen_glue.m \
+	NSScrollView_glue.m \
+	NSScroller_glue.m \
+	NSSearchFieldCell_glue.m \
+	NSSearchField_glue.m \
+	NSSecureTextFieldCell_glue.m \
+	NSSegmentedCell_glue.m \
+	NSSegmentedControl_glue.m \
+	NSShadow_glue.m \
+	NSSimpleHorizontalTypesetter_glue.m \
+	NSSliderCell_glue.m \
+	NSSlider_glue.m \
+	NSSound_glue.m \
+	NSSpeechRecognizer_glue.m \
+	NSSpeechSynthesizer_glue.m \
+	NSSpellChecker_glue.m \
+	NSSplitView_glue.m \
+	NSStatusBar_glue.m \
+	NSStatusItem_glue.m \
+	NSStepperCell_glue.m \
+	NSStepper_glue.m \
+	NSTabViewItem_glue.m \
+	NSTabView_glue.m \
+	NSTableColumn_glue.m \
+	NSTableHeaderCell_glue.m \
+	NSTableHeaderView_glue.m \
+	NSTableView_glue.m \
+	NSTextAttachmentCell_glue.m \
+	NSTextAttachment_glue.m \
+	NSTextContainer_glue.m \
+	NSTextFieldCell_glue.m \
+	NSTextField_glue.m \
+	NSTextStorage_glue.m \
+	NSTextTab_glue.m \
+	NSTextView_glue.m \
+	NSText_glue.m \
+	NSToolbarItem_glue.m \
+	NSToolbar_glue.m \
+	NSTypesetter_glue.m \
+	NSUserDefaultsController_glue.m \
+	NSView_glue.m \
+	NSWindowController_glue.m \
+	NSWindow_glue.m \
+	NSWorkspace_glue.m 
 libAppKitGlue_la_LDFLAGS = -module -x objective-c -framework Cocoa 
 libAppKitGlue_la_LIBADD = 
