--- a/src/foundation/Makefile.am
+++ b/src/foundation/Makefile.am
@@ -2,114 +2,142 @@ PROJECT=cocoa-sharp
 VERSION=0.1
 
 lib_LTLIBRARIES=libFoundationGlue.la
-libFoundationGlue_la_SOURCES =				\
-	 NSAppleEventDescriptor_stub.m \
-	 NSAppleEventManager_stub.m \
-	 NSAppleScript_stub.m \
-	 NSArchiver_stub.m \
-	 NSArray_stub.m \
-	 NSAttributedString_stub.m \
-	 NSAutoreleasePool_stub.m \
-	 NSBundle_stub.m \
-	 NSByteOrder_stub.m \
-	 NSCalendarDate_stub.m \
-	 NSCharacterSet_stub.m \
-	 NSClassDescription_stub.m \
-	 NSCoder_stub.m \
-	 NSCompatibility_stub.m \
-	 NSConnection_stub.m \
-	 NSData_stub.m \
-	 NSDateFormatter_stub.m \
-	 NSDate_stub.m \
-	 NSDebug_stub.m \
-	 NSDecimalNumber_stub.m \
-	 NSDecimal_stub.m \
-	 NSDictionary_stub.m \
-	 NSDistantObject_stub.m \
-	 NSDistributedLock_stub.m \
-	 NSDistributedNotificationCenter_stub.m \
-	 NSEnumerator_stub.m \
-	 NSError_stub.m \
-	 NSException_stub.m \
-	 NSFileHandle_stub.m \
-	 NSFileManager_stub.m \
-	 NSFormatter_stub.m \
-	 NSGeometry_stub.m \
-	 NSHFSFileTypes_stub.m \
-	 NSHTTPCookieStorage_stub.m \
-	 NSHTTPCookie_stub.m \
-	 NSHashTable_stub.m \
-	 NSHost_stub.m \
-	 NSIndexSet_stub.m \
-	 NSInvocation_stub.m \
-	 NSJavaSetup_stub.m \
-	 NSKeyValueCoding_stub.m \
-	 NSKeyValueObserving_stub.m \
-	 NSKeyedArchiver_stub.m \
-	 NSLock_stub.m \
-	 NSMapTable_stub.m \
-	 NSMethodSignature_stub.m \
-	 NSNetServices_stub.m \
-	 NSNotificationQueue_stub.m \
-	 NSNotification_stub.m \
-	 NSNull_stub.m \
-	 NSNumberFormatter_stub.m \
-	 NSObjCRuntime_stub.m \
-	 NSObjectScripting_stub.m \
-	 NSObject_stub.m \
-	 NSPathUtilities_stub.m \
-	 NSPortCoder_stub.m \
-	 NSPortMessage_stub.m \
-	 NSPortNameServer_stub.m \
-	 NSPort_stub.m \
-	 NSProcessInfo_stub.m \
-	 NSPropertyList_stub.m \
-	 NSProtocolChecker_stub.m \
-	 NSProxy_stub.m \
-	 NSRange_stub.m \
-	 NSRunLoop_stub.m \
-	 NSScanner_stub.m \
-	 NSScriptClassDescription_stub.m \
-	 NSScriptCoercionHandler_stub.m \
-	 NSScriptCommandDescription_stub.m \
-	 NSScriptCommand_stub.m \
-	 NSScriptExecutionContext_stub.m \
-	 NSScriptKeyValueCoding_stub.m \
-	 NSScriptObjectSpecifiers_stub.m \
-	 NSScriptStandardSuiteCommands_stub.m \
-	 NSScriptSuiteRegistry_stub.m \
-	 NSScriptWhoseTests_stub.m \
-	 NSSerialization_stub.m \
-	 NSSet_stub.m \
-	 NSSortDescriptor_stub.m \
-	 NSSpellServer_stub.m \
-	 NSStream_stub.m \
-	 NSString_stub.m \
-	 NSTask_stub.m \
-	 NSThread_stub.m \
-	 NSTimeZone_stub.m \
-	 NSTimer_stub.m \
-	 NSURLAuthenticationChallenge_stub.m \
-	 NSURLCache_stub.m \
-	 NSURLConnection_stub.m \
-	 NSURLCredentialStorage_stub.m \
-	 NSURLCredential_stub.m \
-	 NSURLDownload_stub.m \
-	 NSURLError_stub.m \
-	 NSURLHandle_stub.m \
-	 NSURLProtectionSpace_stub.m \
-	 NSURLProtocol_stub.m \
-	 NSURLRequest_stub.m \
-	 NSURLResponse_stub.m \
-	 NSURL_stub.m \
-	 NSUndoManager_stub.m \
-	 NSUserDefaults_stub.m \
-	 NSUtilities_stub.m \
-	 NSValueTransformer_stub.m \
-	 NSValue_stub.m \
-	 NSXMLParser_stub.m \
-	 NSZone_stub.m 
 
+libFoundationGlue_la_SOURCES =				\
+	NSAppleEventDescriptor_glue.m \
+	NSAppleEventManager_glue.m \
+	NSAppleScript_glue.m \
+	NSArchiver_glue.m \
+	NSArray_glue.m \
+	NSAssertionHandler_glue.m \
+	NSAttributedString_glue.m \
+	NSAutoreleasePool_glue.m \
+	NSBundle_glue.m \
+	NSCachedURLResponse_glue.m \
+	NSCalendarDate_glue.m \
+	NSCharacterSet_glue.m \
+	NSClassDescription_glue.m \
+	NSCloneCommand_glue.m \
+	NSCloseCommand_glue.m \
+	NSCoder_glue.m \
+	NSConditionLock_glue.m \
+	NSConnection_glue.m \
+	NSCountedSet_glue.m \
+	NSCreateCommand_glue.m \
+	NSData_glue.m \
+	NSDateFormatter_glue.m \
+	NSDate_glue.m \
+	NSDecimalNumberHandler_glue.m \
+	NSDecimalNumber_glue.m \
+	NSDeleteCommand_glue.m \
+	NSDeserializer_glue.m \
+	NSDictionary_glue.m \
+	NSDirectoryEnumerator_glue.m \
+	NSDistantObjectRequest_glue.m \
+	NSDistantObject_glue.m \
+	NSDistributedLock_glue.m \
+	NSDistributedNotificationCenter_glue.m \
+	NSEnumerator_glue.m \
+	NSError_glue.m \
+	NSException_glue.m \
+	NSFileHandle_glue.m \
+	NSFileManager_glue.m \
+	NSFormatter_glue.m \
+	NSHTTPCookieStorage_glue.m \
+	NSHTTPCookie_glue.m \
+	NSHTTPURLResponse_glue.m \
+	NSHost_glue.m \
+	NSIndexSet_glue.m \
+	NSIndexSpecifier_glue.m \
+	NSInputStream_glue.m \
+	NSInvocation_glue.m \
+	NSKeyedArchiver_glue.m \
+	NSKeyedUnarchiver_glue.m \
+	NSLock_glue.m \
+	NSLogicalTest_glue.m \
+	NSMachBootstrapServer_glue.m \
+	NSMachPort_glue.m \
+	NSMessagePortNameServer_glue.m \
+	NSMethodSignature_glue.m \
+	NSMoveCommand_glue.m \
+	NSMutableArray_glue.m \
+	NSMutableAttributedString_glue.m \
+	NSMutableCharacterSet_glue.m \
+	NSMutableData_glue.m \
+	NSMutableDictionary_glue.m \
+	NSMutableIndexSet_glue.m \
+	NSMutableSet_glue.m \
+	NSMutableString_glue.m \
+	NSMutableURLRequest_glue.m \
+	NSNameSpecifier_glue.m \
+	NSNetServiceBrowser_glue.m \
+	NSNetService_glue.m \
+	NSNotificationCenter_glue.m \
+	NSNotificationQueue_glue.m \
+	NSNotification_glue.m \
+	NSNull_glue.m \
+	NSNumberFormatter_glue.m \
+	NSNumber_glue.m \
+	NSObject_glue.m \
+	NSOutputStream_glue.m \
+	NSPipe_glue.m \
+	NSPortCoder_glue.m \
+	NSPortMessage_glue.m \
+	NSPortNameServer_glue.m \
+	NSPort_glue.m \
+	NSPositionalSpecifier_glue.m \
+	NSProcessInfo_glue.m \
+	NSPropertyListSerialization_glue.m \
+	NSProtocolChecker_glue.m \
+	NSProxy_glue.m \
+	NSQuitCommand_glue.m \
+	NSRangeSpecifier_glue.m \
+	NSRecursiveLock_glue.m \
+	NSRelativeSpecifier_glue.m \
+	NSRunLoop_glue.m \
+	NSScanner_glue.m \
+	NSScriptClassDescription_glue.m \
+	NSScriptCoercionHandler_glue.m \
+	NSScriptCommandDescription_glue.m \
+	NSScriptCommand_glue.m \
+	NSScriptExecutionContext_glue.m \
+	NSScriptObjectSpecifier_glue.m \
+	NSScriptSuiteRegistry_glue.m \
+	NSScriptWhoseTest_glue.m \
+	NSSerializer_glue.m \
+	NSSetCommand_glue.m \
+	NSSet_glue.m \
+	NSSocketPortNameServer_glue.m \
+	NSSocketPort_glue.m \
+	NSSortDescriptor_glue.m \
+	NSSpecifierTest_glue.m \
+	NSSpellServer_glue.m \
+	NSStream_glue.m \
+	NSString_glue.m \
+	NSTask_glue.m \
+	NSThread_glue.m \
+	NSTimeZone_glue.m \
+	NSTimer_glue.m \
+	NSURLAuthenticationChallenge_glue.m \
+	NSURLCache_glue.m \
+	NSURLConnection_glue.m \
+	NSURLCredentialStorage_glue.m \
+	NSURLCredential_glue.m \
+	NSURLDownload_glue.m \
+	NSURLHandle_glue.m \
+	NSURLProtectionSpace_glue.m \
+	NSURLProtocol_glue.m \
+	NSURLRequest_glue.m \
+	NSURLResponse_glue.m \
+	NSURL_glue.m \
+	NSUnarchiver_glue.m \
+	NSUndoManager_glue.m \
+	NSUniqueIDSpecifier_glue.m \
+	NSUserDefaults_glue.m \
+	NSValueTransformer_glue.m \
+	NSValue_glue.m \
+	NSWhoseSpecifier_glue.m \
+	NSXMLParser_glue.m 
 libFoundationGlue_la_LDFLAGS = -x objective-c -framework Cocoa 
 libFoundationGlue_la_LIBADD = 
 libFoundationGlue_ls_LIBS = -framework Cocoa
