Makefile magic; only regenerate when the generator changes
svn path=/trunk/cocoa-sharp/; revision=30015

--- a/generator/Makefile
+++ b/generator/Makefile
@@ -1,7 +1,7 @@
-all: generator output
+all: generator.exe generator.run
 
-generator: Category.cs Interface.cs Main.cs Method.cs Protocol.cs
+generator.exe: Category.cs Interface.cs Main.cs Method.cs Protocol.cs
 	mcs -g Category.cs Interface.cs Main.cs Method.cs Protocol.cs -out:generator.exe
 
-output:
-	(cd .. ; mono generator/generator.exe -xml:generator/generator.xml)
+generator.run:
+	(cd .. ; mono generator/generator.exe -xml:generator/generator.xml) && touch generator.run
