Cleanup, Headers, -out:[CS|OC], VS proj
svn path=/trunk/cocoa-sharp/; revision=30109

--- a/generator/Makefile
+++ b/generator/Makefile
@@ -4,4 +4,4 @@ generator.exe: Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Pro
 	mcs -g Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Protocol.cs -out:generator.exe
 
 generator.run: generator.exe
-	(cd .. ; mono generator/generator.exe -xml:generator/generator.xml) && touch generator.run
+	(cd .. ; mono generator/generator.exe -xml:generator/generator.xml -out:CS) && touch generator.run
