More cleanup and refactoring start Make output actually compile (diverse fixes)
svn path=/trunk/cocoa-sharp/; revision=30113

--- a/generator/Makefile
+++ b/generator/Makefile
@@ -1,7 +1,7 @@
 all: generator.exe generator.run
 
-generator.exe: Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Protocol.cs
-	mcs -g Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Protocol.cs -out:generator.exe
+generator.exe: Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Protocol.cs Element.cs
+	mcs -g Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Protocol.cs Element.cs -out:generator.exe
 
 generator.run: generator.exe
 	(cd .. ; mono generator/generator.exe -xml:generator/generator.xml -out:CS) && touch generator.run
