Add property support
svn path=/trunk/cocoa-sharp/; revision=30139

--- a/generator/Makefile
+++ b/generator/Makefile
@@ -4,8 +4,8 @@ generator.exe: Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Pro
 	mcs -g Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Protocol.cs Element.cs -out:generator.exe
 
 generator.run: generator.exe
-	(cd .. ; mono generator/generator.exe -xml:generator/generator.xml -out:OC) && touch generator.run
+	(cd .. ; mono --debug generator/generator.exe -xml:generator/generator.xml -out:OC) && touch generator.run
 
 cs: generator.exe
-	(cd .. ; mono generator/generator.exe -xml:generator/generator.xml -out:CS)
+	(cd .. ; mono --debug generator/generator.exe -xml:generator/generator.xml -out:CS)
 
