Make test compile with the lasted glue API name change
svn path=/trunk/cocoa-sharp/; revision=30226

--- a/src/Apple.Foundation/Makefile
+++ b/src/Apple.Foundation/Makefile
@@ -7,3 +7,6 @@ maintainer-clean: clean
 
 clean:
 	rm ../../build/Apple.Foundation.dll
+
+test:
+	mcs NSAppleScript.cs.gen NSObject.cs INSCopying.cs.gen NSURL.cs.gen INSCoding.cs.gen INSURLHandleClient.cs.gen NSDictionary.cs.gen NSAppleEventDescriptor.cs.gen NSAttributedString.cs.gen NSCoder.cs.gen NSNumber.cs.gen NSURLHandle.cs.gen NSData.cs.gen INSMutableCopying.cs.gen NSValue.cs.gen NSURLHandleStatus.cs.gen
