Directory movment & auto* updates.
svn path=/trunk/cocoa-sharp/; revision=30231

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,1 +1,1 @@
-SUBDIRS=appkit foundation Apple.Foundation Apple.AppKit
+SUBDIRS=AppKit.Glue WebKit.Glue Foundation.Glue Apple.Foundation Apple.AppKit
