--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #
 #  Copyright (c) 2004 Quark Inc. and Collier Technologies.  All rights reserved.
 #
-#	$Header: /home/miguel/third-conversion/public/cocoa-sharp/configure.in,v 1.3 2004/06/16 12:20:26 urs Exp $
+#	$Header: /home/miguel/third-conversion/public/cocoa-sharp/configure.in,v 1.4 2004/06/23 18:24:39 gnorton Exp $
 #
 
 AC_INIT(README)
@@ -89,13 +89,17 @@ AC_OUTPUT([
 Makefile
 test/Makefile
 src/Makefile
-src/appkit/Makefile
-src/foundation/Makefile
+src/AppKit.Glue/Makefile
+src/Foundation.Glue/Makefile
+src/WebKit.Glue/Makefile
 ])
 
 #***************************************************************************
 #
 # $Log: configure.in,v $
+# Revision 1.4  2004/06/23 18:24:39  gnorton
+# Directory movment & auto* updates.
+#
 # Revision 1.3  2004/06/16 12:20:26  urs
 # Add CVS headers comments, authors and Copyright info, feel free to add your name or change what is appropriate
 #
