--- a/src/Apple.AppKit/Makefile
+++ b/src/Apple.AppKit/Makefile
@@ -6,4 +6,6 @@ all: ../../build/Apple.AppKit.dll
 maintainer-clean: clean
 
 clean:
+	touch ../../build/Apple.AppKit.dll
 	rm ../../build/Apple.AppKit.dll
+
