--- a/src/Apple.Foundation/Makefile
+++ b/src/Apple.Foundation/Makefile
@@ -6,6 +6,7 @@ all: ../../build/Apple.Foundation.dll
 maintainer-clean: clean
 
 clean:
+	touch ../../build/Apple.Foundation.dll
 	rm ../../build/Apple.Foundation.dll
 
 test:
