some makefile love to make 'clean' happy
svn path=/trunk/cocoa-sharp/; revision=30235

--- a/generator/Makefile
+++ b/generator/Makefile
@@ -9,3 +9,8 @@ generator.run: generator.exe
 cs: generator.exe
 	(cd .. ; mono --debug generator/generator.exe -xml:generator/generator.xml -out:CS)
 
+clean:
+	rm generator.exe generator.run
+
+maintainer-clean: clean
+
